--- a/src/renderer/css/darkmode/DownloadList.scss
+++ b/src/renderer/css/darkmode/DownloadList.scss
@@ -137,7 +137,7 @@
     }
     .cancel {
       background: #434348;
-      border: 1px solid #606066;
+      border: 1px solid #4A4A50;
       color: rgba(255, 255, 255, 0.7);
       &:hover {
         background: #54545A;
@@ -146,8 +146,8 @@
       }
     }
     .download {
-      background: #434348;
-      border: 1px solid #606066;
+      background: #4B4B50;
+      border: 1px solid #54545A;
       color: rgba(255, 255, 255, 0.7);
       &:hover {
         background: #54545A;
